--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <nav class="navbar navbar-expand-sm fixed-top border" style="background-color: rgba(255, 255, 255, 0.8);">
         <div class="container-fluid">
             <div class="d-flex flex-column synthek my-auto navbar-brand" style="letter-spacing: 2px;">
-                <label class="fs-5 me-3">EPOCH </label>
-                <label class="fs-5 ms-auto" style="line-height: 5px;">1.0 </label>
+                <a class="fs-5 text-black me-3" href="#home">EPOCH </a>
+                <a class="fs-5 text-black ms-auto" href="#home" style="line-height: 5px;">1.0 </a>
             </div>
             <button class="navbar-toggler ms-auto collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent">
@@ -34,13 +34,13 @@
         </div>
     </nav>
 
-    <section id="#" class="h-100 pt-5">
+    <section id="home" class="h-100 pt-5">
         <div class="container h-100">
             <div class="d-flex h-100">
-                <div class="my-auto">
+                <div class="my-auto pb-5">
                     <label class="display-4 synthek" style="line-height: 4px;">Welcome</label>
                     <br>
-                    <label class="fs-4 fw-bolder">To the largest tech fest yet at GITAM University</label>
+                    <label class="fs-4 fw-bolder pb-5">To the largest tech fest yet at GITAM University</label>
                 </div>
             </div>
         </div>
@@ -74,43 +74,43 @@
             <label class="fs-3 synthek">Our Events</label>
             <div class="d-flex flex-wrap">
                 <div class="mx-auto text-center">
-                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/Group 1 (1).png" height="130px"
+                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/techscapades.png" height="130px"
                         style="background-color: #8470A6;">
                     <br>
                     <label>Techscapades</label>
                 </div>
                 <div class="mx-auto text-center">
-                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/Group 2.png" height="130px"
+                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/techvista.png" height="130px"
                         style="background-color: #8470A6;">
                     <br>
                     <label>Techvista</label>
                 </div>
                 <div class="mx-auto text-center">
-                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/Group 3 (1).png" height="130px"
+                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/gaming.png" height="130px"
                         style="background-color: #8470A6;">
                     <br>
                     <label>Gaming tournament</label>
                 </div>
                 <div class="mx-auto text-center">
-                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/Group 4 (2).png" height="130px"
+                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/techtrivia.png" height="130px"
                         style="background-color: #8470A6;">
                     <br>
                     <label>Tech trivia</label>
                 </div>
                 <div class="mx-auto text-center">
-                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/Group 9 (1).png" height="130px"
+                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/hackathons.png" height="130px"
                         style="background-color: #8470A6;">
                     <br>
                     <label>Hackathons</label>
                 </div>
                 <div class="mx-auto text-center">
-                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/Group 7.png" height="130px"
+                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/codingcomp.png" height="130px"
                         style="background-color: #8470A6;">
                     <br>
                     <label>Coding competions</label>
                 </div>
                 <div class="mx-auto text-center">
-                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/Group 8.png" height="130px"
+                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/djnight.png" height="130px"
                         style="background-color: #8470A6;">
                     <br>
                     <label>DJ night</label>
@@ -122,7 +122,7 @@
     <section id="faqs" class="py-3">
         <div class="container">
             <label class="fs-3 synthek">FAQs</label>
-            <div class="accordion" id="accordionParent"></div>
+            <div class="accordion accordian-flush" id="accordionParent"></div>
         </div>
     </section>
 
