added sponsors and partners

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm fixed-top border" style="background-color: rgba(255, 255, 255, 0.8);">
+    <nav class="navbar navbar-expand-sm fixed-top border" style="background-color: rgba(255, 255, 255, 0.7);">
         <div class="container-fluid">
             <div class="d-flex flex-column synthek my-auto navbar-brand" style="letter-spacing: 2px;">
                 <a class="fs-5 text-black me-3" href="#home">EPOCH </a>
@@ -38,7 +38,7 @@
         <div class="container h-100">
             <div class="d-flex h-100">
                 <div class="my-auto pb-5">
-                    <label class="display-4 synthek" style="line-height: 4px;">Welcome</label>
+                    <label class="display-2 synthek" style="line-height: 4px;">Welcome</label>
                     <br>
                     <label class="fs-4 fw-bolder pb-5">To the largest tech fest yet at GITAM University</label>
                 </div>
@@ -48,7 +48,7 @@
 
     <section id="about" class="py-3">
         <div class="container">
-            <label class="fs-3 synthek">About Epoch 1.0</label>
+            <label class="fs-2 synthek">About Epoch 1.0</label>
             <p class="mx-4">Epoch 1.0 is the first large-scale tech-related event that GITAM University experiences. It
                 is a two-day
                 fest conducted by GitHub Community GITAM at GITAM University, Bangalore. This fest primarily focuses on
@@ -58,7 +58,7 @@
                 compete with the other finalists from the other campuses.</p>
         </div>
         <div class="container">
-            <label class="fs-3 synthek">About GitHub GITAM</label>
+            <label class="fs-2 synthek">About GitHub GITAM</label>
             <p class="mx-4">GitHub Community GITAM (GCG) was founded in September 2021 unofficially by a group of six
                 like-minded individuals in GITAM Bangalore to promote technology and its importance in the university.
                 In January 2022, GitHub Community GITAM was named an official SIG (Special Interest Group) under the
@@ -71,7 +71,7 @@
 
     <section id="events" class="py-3">
         <div class="container">
-            <label class="fs-3 synthek">Our Events</label>
+            <label class="fs-2 synthek">Our Events</label>
             <div class="d-flex flex-wrap">
                 <div class="mx-auto text-center">
                     <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/techscapades.png" height="130px"
@@ -119,16 +119,42 @@
         </div>
     </section>
 
+    <section id="sponsors" class="py-3">
+        <div class="container">
+            <label class="fs-2 synthek">Our Sponsors</label>
+            <div class="d-flex flex-wrap align-items-center">
+                <img class="mx-auto m-3" src="assets/imgs/github.png" height="60">
+                <img class="mx-auto m-3" src="assets/imgs/bharat.png" height="60">
+                <img class="mx-auto m-3" src="assets/imgs/careerlabs.png" height="60">
+                <img class="mx-auto m-3" src="assets/imgs/dosl.png" height="85">
+                <img class="mx-auto m-3" src="assets/imgs/gitam.png" height="60">
+            </div>
+        </div>
+    </section>
+
+    <section id="parterns" class="py-3">
+        <div class="container">
+            <label class="fs-2 synthek">Our Partners</label>
+            <div class="d-flex flex-wrap align-items-center">
+                <img class="mx-auto m-3" src="assets/imgs/certificate.png" height="60">
+                <img class="mx-auto m-3" src="assets/imgs/monster.png" height="60">
+                <img class="mx-auto m-3" src="assets/imgs/taskade.png" height="60">
+                <img class="mx-auto m-3" src="assets/imgs/xyz.png" height="60">
+                <img class="mx-auto m-3" src="assets/imgs/gstudio.png" height="60">
+            </div>
+        </div>
+    </section>
+
     <section id="faqs" class="py-3">
         <div class="container">
-            <label class="fs-3 synthek">FAQs</label>
+            <label class="fs-2 synthek">FAQs</label>
             <div class="accordion accordian-flush" id="accordionParent"></div>
         </div>
     </section>
 
     <section id="contact" class="py-3" style="background-color: #8367BB;">
         <div class="d-flex flex-column justify-content-center mx-5 py-5">
-            <label class="fs-3 synthek pb-3">Contact us</label>
+            <label class="fs-2 synthek pb-3">Contact us</label>
             <div class="row">
                 <div class="col d-flex flex-column mx-auto">
                     <label>Srinija Dharani</label>
