sponsors nav button

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-padding px-2 align-items-center ms-auto">
-                    <li class="nav-item"><a class="nav-link mx-2" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link mx-2" href="#events">Events</a></li>
-                    <li class="nav-item"><a class="nav-link mx-2" href="#faqs">FAQs</a></li>
-                    <li class="nav-item"><a class="nav-link mx-2" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-black mx-2" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-black mx-2" href="#events">Events</a></li>
+                    <li class="nav-item"><a class="nav-link text-black mx-2" href="#sponsors">Sponsors</a></li>
+                    <li class="nav-item"><a class="nav-link text-black mx-2" href="#faqs">FAQs</a></li>
+                    <li class="nav-item"><a class="nav-link text-black mx-2" href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
