mini games and performances

--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
                     <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/hackathons.png" height="130px"
                         style="background-color: #8470A6;">
                     <br>
-                    <label>Hackathons</label>
+                    <label>Hackathons & Codeathons</label>
                 </div>
                 <div class="mx-auto text-center">
-                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/codingcomp.png" height="130px"
+                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/booth.png" height="130px"
                         style="background-color: #8470A6;">
                     <br>
-                    <label>Coding competions</label>
+                    <label>Mini Games</label>
                 </div>
                 <div class="mx-auto text-center">
-                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/djnight.png" height="130px"
+                    <img class="rounded-circle mx-auto p-2 m-1" src="assets/imgs/karaoke.png" height="130px"
                         style="background-color: #8470A6;">
                     <br>
-                    <label>DJ night</label>
+                    <label>Cultural Performances</label>
                 </div>
             </div>
         </div>
@@ -178,10 +178,10 @@
                         href="https://discord.com/invite/TeFGfTju">
                         <img class="img-fluid" src="assets/imgs/discord.png" style="filter: invert(100%);">
                     </a>
-                    <a class="rounded-circle p-2 m-2 my-auto"
+                    <a class="rounded-circle p-1 pt-2 m-2 my-auto"
                         style="background-color: #61319E; aspect-ratio: 1; height: 40px;"
                         href="https://github.com/github-community-gitam">
-                        <img class="img-fluid" src="assets/imgs/github.png" style="filter: invert(100%);">
+                        <img class="img-fluid" src="assets/imgs/github.png">
                     </a>
                     <a class="rounded-circle p-2 m-2 my-auto"
                         style="background-color: #61319E; aspect-ratio: 1; height: 40px;"
